--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<!-- Header -->
 			<header id="header" class="alt">
 				<div class="inner">
-					<h1>GitHub Laboratory - PR 1.3.7/h1>
+					<h1>GitHub Laboratory - PR made by Cristofer/h1>
 					<p>Second change <a href="https://templated.co">TEMPLATED</a></p>
 				</div>
 			</header>
